# universidad-python

./: .gitignore  docker-compose.yml
base_datos/: prueba_database.py  sentences_sql_basic.sql
ciclos/: break.py  ciclo_for.py  continue.py  de_0a_5.py  de_5a_1.py  while.py
colecciones/: diccionarios.py  listas.py  rangos.py  set.py  tupla_lista.py  tuplas.py
conceptos_antes_backend/: archivo_grande.txt  callback_download_file.py  callback_form_validation.py  callback_request.py  coche.py  decorador.py  decorador_acceso.py  decorador_tiempo.py  decorador_verificador.py  generador_fibonacci.py  generador_impares.py  generador_procesar_archivos.py  herencia.py  herencia_multiple.py
constantes/: Mathe.py  constantes.py
estructuras_de_datos/: burbuja.py  listas.py
excepciones/: NumerosIgualesException.py  manejo_excepciones.py
flask_learn/projects_flask/SapFlask/SapFlask/: README.md  docker-compose.yml  pyproject.toml
flask_learn/projects_flask/SapFlask/SapFlask/src/sapflask/: __init__.py  app.py  forms.py  models.py
flask_learn/projects_flask/SapFlask/SapFlask/src/sapflask/migrations/: README
flask_learn/projects_flask/SapFlask/SapFlask/src/sapflask/migrations/versions/: 098608655f0c_.py
flask_learn/projects_flask/SapFlask/SapFlask/src/sapflask/templates/: agregar.html  detalle.html  editar.html  index.html
funciones/: argumentos_variables_args.py  argumentos_variables_kwargs.py  calculadora_inpuestos.py  convertidor_temperatura.py  datos_distintos_como_arguments.py  ejercicio.py  ejercicio_2.py  ejercicio_3.py  funciones.py  recursividad.py  return.py
(+98 files in other folders)
